# iqs231x-i2c

./: Cargo.toml  README.md
src/: error.rs  iqs231x.rs  lib.rs
