[package]
name = "iqs231x-i2c"
version = "0.1.1"
authors = ["CoffeeLink <contact@coffeelink.hu>"]

edition = "2024"
# rust-version = ""

description = "A driver for the IQS231A/B single channel capacitive proximity/touch controller chipset"
repository = "https://github.com/CoffeeLink/iqs231x-i2c"
#documentation = "https://docs.rs/iqs231x-i2c"

keywords = ["embedded-hal", "iqs231x", "iqs231a", "iqs231b", "no_std"]
categories = ["embedded", "no-std", "no-std::no-alloc", "hardware-support"]

license = "Apache-2.0"
readme = "README.md"

[features]
default = ["blocking"]
blocking = []
async = ["dep:embedded-hal-async", "embedded-hal-mock/embedded-hal-async"]

defmt-03 = ["dep:defmt-03", "embedded-hal/defmt-03", "embedded-hal-async/defmt-03"]

[dependencies]
embedded-hal = { version = "1.0.0", features = [] }
embedded-hal-async = { version = "1.0.0", features = [], optional = true }
defmt-03 = { package = "defmt", version = "0.3", optional = true }

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", default-features = false, features = ["eh1"] }